--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,9 +37,9 @@ jobs:
       # 현재는 skip
 
       # build 준비
-      # chmod +x ./gradlew : 퍼미션 오류 발생시 처리
+      # chmod +x ./gradlew : 퍼미션 오류 발생 시 처리
       # ./gradlew clean build
       - name: 단위 테스트 및 빌드
-    # 명령어가 여러개면 | 추가
-    run:
+    # 명령어가 여러 개면 | 추가
+    run: |
       ./gradlew clean build
