--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,21 @@ jobs:
       # chmod +x ./gradlew : 퍼미션 오류 발생 시 처리
       # ./gradlew clean build
       - name: 단위 테스트 및 빌드
-    # 명령어가 여러 개면 | 추가
-    run: |
-      chmod +x ./gradlew
-      ./gradlew clean build
+        # 명령어가 여러 개면 | 추가
+        # 1. 빌드용 쉘스크립트(gradlew)를 퍼미션 조정
+        # 2. 빌드
+        # 3. 현재 위치 확인
+        # 4. 현재 위치 목록
+        # 5. 빌드된 산출물의 목록 확인
+        run: |
+          chmod +x ./gradlew
+          ./gradlew clean build
+          pwd
+          ls
+          ls ./build/libs
+
+      # 이름이 너무 길기 때문에 적당하게 수정 -> 리눅스 명령어
+      - name: 관리상 빌드된 결과물의 이름을 변경 처리
+        run: |
+          mv ./build/libs/*SNAPSHOT.jar ./run.jar
+          ls
